# BROski-Bot

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  bot.py  coverage.xml  env.example  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  self_learning_feedback.md
.github/workflows/: cd.yml  ci.yml  release.yml  self-learning.yml
cogs/: quest_system.py
database/: broski_main.db
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  SELF_LEARNING.md  TROUBLESHOOTING.md
scripts/: check_feedback_count.py  deploy.sh  deploy_model.py  evaluate_model.py  setup.ps1  setup.sh  test.sh  train_agent.py
src/: bot.py  main.py
src/cogs/: self_learning.py
src/core/: database.py
src/models/: __init__.py
src/services/: economy.py
tests/unit/services/: test_expanded_services.py
