[tool.poetry]
name = "broski-bot"
version = "3.0.0"
description = "Neurodivergent-friendly Discord bot with self-learning capabilities"
authors = ["Lyndz Williams <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/welshDog/BROski-Bot"
keywords = ["discord", "bot", "ai", "neurodivergent", "adhd", "self-learning"]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
